class Location {
    constructor(name, coords) {
        this.name = name;
        this.coords = coords;
    }
}

module.exports = Location